Fixed z-index value in collection show sharebox

--- a/app/components/collectionShow/collectionShow.scss
+++ b/app/components/collectionShow/collectionShow.scss
@@ -180,7 +180,7 @@ $semi_full_width: 997px;
   background-color: white;
   display: inline-flex;
   position: absolute;
-  z-index: 9999;
+  z-index: 998;
   margin-left: -105px;
   margin-top: 14px;
   padding: 16px;
